调整 JVM 参数适应高版本 JDK，移除内存优化参数，不分不适用，移除 DS copy